--- a/html/main.html
+++ b/html/main.html
@@ -21,28 +21,31 @@
 	</head>
 
 	<body>
+		<header class="mui-bar mui-bar-nav">
+			<h1 class="mui-title">足球大师黄金一代</h1>
+		</header>
 		<nav class="mui-bar mui-bar-tab">
-		    <a class="mui-tab-item mui-active" data-href="index/home.html" data-index="0">
+		    <a class="mui-tab-item mui-active" data-href="foot/home.html" data-index="0">
 		        <span class="mui-icon iconfont icon-home"></span>
 		        <span class="mui-tab-label">首页</span>
 		    </a>
-		    <a class="mui-tab-item" data-href="tool/tool.html" data-index="1">
-		        <span class="mui-icon iconfont icon-tool"></span>
-		        <span class="mui-tab-label">工具</span>
+		    <a class="mui-tab-item" data-href="foot/star.html" data-index="1">
+		        <span class="mui-icon mui-icon-personadd"></span>
+		        <span class="mui-tab-label">球星</span>
 		    </a>
-		    <a class="mui-tab-item" data-href="pk/pk.html" style="overflow: visible;">
-		       <span class="mui-icon iconfont icon-pk_default"></span>
-		        <span class="mui-tab-label">约战</span>
+		    <a class="mui-tab-item" data-href="foot/share.html" data-index="2">
+		       <span class="mui-icon mui-icon-starhalf"></span>
+		        <span class="mui-tab-label">攻略</span>
 		    </a>
-		    <a class="mui-tab-item" data-href="bbs/bbs.html" data-index="3">
-		        <span class="mui-icon iconfont icon-forum"></span>
-		        <span class="mui-tab-label">论坛</span>
+		    <a class="mui-tab-item" data-href="foot/team.html" data-index="3">
+		        <span class="mui-icon mui-icon-gear"></span>
+		        <span class="mui-tab-label">组队</span>
 		    </a>
 		    <a class="mui-tab-item" data-href="my/user.html" data-index="4">
-		        <span class="mui-icon iconfont icon-me1"></span>
+		        <span class="mui-icon mui-icon-person"></span>
 		        <span class="mui-tab-label">我的</span>
 		    </a>
-		</nav>
+		</nav>		
 	</body>
 	<script type="text/javascript">
 		script(['../js/mui.min.js', '../js/lib/md5.min.js', '../js/lib/common.js','../js/main.js'],true);
